[package]
name = "get-socks-change-file"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ['rustls-tls'] }
serde = {  version = "1.0.219", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
