[package]
name = "get-socks-change-file"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ['rustls-tls'] }
serde = {  version = "1.0.219", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }

[dev-dependencies]
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = "0.1.12"
socks5-server = "0.10.1"
tokio = { version = "1.45.0", features = ["macros"] }
